src/task/inventory/snapshots/genin__task__inventory__test__inventory_from_cluster_v1.snap
---
source: src/task/inventory/test.rs
expression: inventory
---
all:
  vars:
    ansible_user: ansible
    ansible_password: ansible
    cartridge_app_name: genin-app
    cartridge_cluster_cookie: genin-app-secret-cookie
    cartridge_failover_params:
      mode: stateful
      state_provider: stateboard
      stateboard_params:
        uri: "10.99.16.66:5001"
        password: genin-app
  hosts:
    api-1:
      config:
        advertise_uri: "10.99.16.65:5002"
        http_port: 8100
    storage-1-1:
      config:
        advertise_uri: "10.99.16.65:5003"
        http_port: 8101
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    storage-1-3:
      config:
        advertise_uri: "10.99.16.65:5004"
        http_port: 8102
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    storage-2-2:
      config:
        advertise_uri: "10.99.16.65:5005"
        http_port: 8103
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    cache-1-1:
      config:
        advertise_uri: "10.99.16.65:5006"
        http_port: 8104
    cache-1-3:
      config:
        advertise_uri: "10.99.16.65:5007"
        http_port: 8105
    cache-2-2:
      config:
        advertise_uri: "10.99.16.65:5008"
        http_port: 8106
    router-1:
      config:
        advertise_uri: "10.99.16.65:5009"
        http_port: 8107
    calculator-1:
      config:
        advertise_uri: "10.99.16.66:5002"
        http_port: 8100
    storage-1-2:
      config:
        advertise_uri: "10.99.16.66:5003"
        http_port: 8101
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    storage-2-1:
      config:
        advertise_uri: "10.99.16.66:5004"
        http_port: 8102
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    storage-2-3:
      config:
        advertise_uri: "10.99.16.66:5005"
        http_port: 8103
        memtx_memory: 1179869184
        vinyl_memory: 10345452343
    cache-1-2:
      config:
        advertise_uri: "10.99.16.66:5006"
        http_port: 8104
    cache-2-1:
      config:
        advertise_uri: "10.99.16.66:5007"
        http_port: 8105
    cache-2-3:
      config:
        advertise_uri: "10.99.16.66:5008"
        http_port: 8106
    stateboard:
      stateboard: true
      config:
        listen: "10.99.16.66:5001"
        password: genin-app
  children:
    api-1-replicaset:
      vars:
        replicaset_alias: api-1
        failover_priority:
          - api-1
        roles:
          - api
        weight: 10
      hosts:
        api-1: ~
    storage-1-replicaset:
      vars:
        replicaset_alias: storage-1
        failover_priority:
          - storage-1-1
          - storage-1-2
          - storage-1-3
        roles:
          - storage
        weight: 10
      hosts:
        storage-1-1: ~
        storage-1-3: ~
        storage-1-2: ~
    storage-2-replicaset:
      vars:
        replicaset_alias: storage-2
        failover_priority:
          - storage-2-1
          - storage-2-2
          - storage-2-3
        roles:
          - storage
        weight: 10
      hosts:
        storage-2-2: ~
        storage-2-1: ~
        storage-2-3: ~
    cache-1-replicaset:
      vars:
        replicaset_alias: cache-1
        failover_priority:
          - cache-1-1
          - cache-1-2
          - cache-1-3
        roles:
          - storage
        weight: 10
      hosts:
        cache-1-1: ~
        cache-1-3: ~
        cache-1-2: ~
    cache-2-replicaset:
      vars:
        replicaset_alias: cache-2
        failover_priority:
          - cache-2-1
          - cache-2-2
          - cache-2-3
        roles:
          - storage
        weight: 10
      hosts:
        cache-2-2: ~
        cache-2-1: ~
        cache-2-3: ~
    router-1-replicaset:
      vars:
        replicaset_alias: router-1
        failover_priority:
          - router-1
        roles:
          - router
          - failover-coordinator
        weight: 10
      hosts:
        router-1: ~
    calculator-1-replicaset:
      vars:
        replicaset_alias: calculator-1
        failover_priority:
          - calculator-1
        roles:
          - calculator
        weight: 10
      hosts:
        calculator-1: ~
    host-1:
      vars:
        ansible_host: 10.99.16.65
      hosts:
        api-1: ~
        storage-1-1: ~
        storage-1-3: ~
        storage-2-2: ~
        cache-1-1: ~
        cache-1-3: ~
        cache-2-2: ~
        router-1: ~
    host-2:
      vars:
        ansible_host: 10.99.16.66
      hosts:
        calculator-1: ~
        storage-1-2: ~
        storage-2-1: ~
        storage-2-3: ~
        cache-1-2: ~
        cache-2-1: ~
        cache-2-3: ~
        stateboard: ~

