src/task/inventory/snapshots/genin__task__inventory__test__inventory_per_instance_vars.snap
---
source: src/task/inventory/test.rs
expression: inventory
---
all:
  vars:
    ansible_user: ansible
    ansible_password: ansible
    cartridge_app_name: myapp
    cartridge_cluster_cookie: myapp-cookie
    cartridge_package_path: /tmp/myapp.rpm
    cartridge_bootstrap_vshard: true
    cartridge_failover_params:
      mode: stateful
      state_provider: stateboard
      stateboard_params:
        uri: "192.168.16.11:4401"
        password: password
  hosts:
    router-1:
      config:
        advertise_uri: "192.168.16.11:3031"
        http_port: 8081
      vars:
        cartridge_extra_env:
          TARANTOOL_NET_MSG_MAX: 1536
        cartridge_force_leader_control_instance: false
    stateboard:
      stateboard: true
      config:
        listen: "192.168.16.11:4401"
        password: password
  children:
    router-1-replicaset:
      vars:
        replicaset_alias: router-1
        failover_priority:
          - router-1
        roles:
          - router
      hosts:
        router-1: ~
    server-1:
      vars:
        ansible_host: 192.168.16.11
      hosts:
        router-1: ~
        stateboard: ~

